--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs-extra": "^9.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "validator": "^13.5.2"
   }
